# SDL2-GUI

./: .travis.yml  CMakeLists.txt  README.md
SDL2-GUI/: CMakeLists.txt  SDL2-GUI.sln
SDL2-GUI-Test/: CMakeLists.txt  SDL2-GUI-Test.vcxproj  SDL2-GUI-Test.vcxproj.filters  main.cpp
SDL2-GUI-Test/src/: main.cpp
SDL2-GUI/SDL2-GUI/: Colours.cpp  Colours.hpp  GraphicUserInterfaceView.cpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  SDL2-GUI.vcxproj  SDL2-GUI.vcxproj.filters  View.cpp  View.hpp
SDL2-GUI/SDL2-GUI/components/: Button.cpp  Button.hpp  ClickableComponent.cpp  ClickableComponent.hpp  Component.cpp  Container.cpp  Container.hpp  ImageLabel.cpp  NumberSpinner.cpp  NumberSpinner.hpp  SDLEventHandler.hpp  ScrollPane.cpp  Spinner.cpp  Spinner.hpp  TextBasedComponent.cpp  TextInput.cpp  TextLabel.cpp  TextLabel.hpp  TickBox.cpp  TickBox.hpp
SDL2-GUI/include/: Exception.hpp  GraphicUserInterfaceView.hpp  IComponent.hpp  View.hpp
SDL2-GUI/include/components/: Button.hpp  Component.hpp  ImageLabel.hpp  ScrollPane.hpp  TextBasedComponent.hpp  TextInput.hpp  TextLabel.hpp
SDL2-GUI/src/: Colours.cpp  Exception.cpp  GraphicUserInterfaceView.cpp  Point.cpp  Rectangle.cpp  View.cpp
SDL2-GUI/src/components/: Button.cpp  ClickableComponent.cpp  Component.cpp  Container.cpp  ImageLabel.cpp  NumberSpinner.cpp  ScrollPane.cpp  Spinner.cpp  TextBasedComponent.cpp  TextInput.cpp  TextLabel.cpp  TickBox.cpp
